ProdIND/ProdPrograms/force-app/main/default/objects/DSA_Preferred_BE_Mapping__c/DSA_Preferred_BE_Mapping__c.object-meta.xml
<CustomObject>
    <label>DSA Preferred BE Mapping</label>
    <nameField>
        <label>DSA Preferred BE Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DSA Preferred BE Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>