ProdIND/ProdPrograms/force-app/main/default/objects/DSA_Preferred_BE_Mapping__c/fields/Ben_code__c.field-meta.xml
<CustomField>
    <fullName>Ben_code__c</fullName>
    <label>Ben code</label>
    <length>155</length>
    <type>Text</type>
</CustomField>