ProdIND/ProdPrograms/force-app/main/default/objects/DSA_Preferred_BE_Mapping__c/fields/Ben_name__c.field-meta.xml
<CustomField>
    <fullName>Ben_name__c</fullName>
    <label>Ben name</label>
    <length>155</length>
    <type>Text</type>
</CustomField>