ProdIND/ProdPrograms/force-app/main/default/objects/DSA_Preferred_BE_Mapping__c/fields/Emp_Id__c.field-meta.xml
<CustomField>
    <fullName>Emp_Id__c</fullName>
    <label>Emp Id</label>
    <length>155</length>
    <type>Text</type>
</CustomField>