ProdIND/ProdPrograms/force-app/main/default/objects/DSA_Preferred_BE_Mapping__c/fields/Preferred_BE_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_BE_Name__c</fullName>
    <label>Preferred BE Name</label>
    <length>155</length>
    <type>Text</type>
</CustomField>